# xdrfile

./: .travis.yml  .travis_bench.sh  Cargo.toml  README.md  build.rs
benches/: benchmarks.rs
src/: errors.rs  filemode.rs  frame.rs  iterator.rs  lib.rs
src/c_abi/: mod.rs  xdr_seek.rs  xdrfile.rs  xdrfile_trr.rs  xdrfile_xtc.rs
tests/: integration.rs
